--- a/RegistroTecnicos/appsettings.json
+++ b/RegistroTecnicos/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConStr" : "Data Source = Data\\Tecnicos.Db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
