--- a/RegistroTecnicos/RegistroTecnicos.csproj
+++ b/RegistroTecnicos/RegistroTecnicos.csproj
@@ -12,9 +12,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="5.1.6" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Pages\Consulta\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
