--- a/RegistroTecnicos/RegistroTecnicos.csproj
+++ b/RegistroTecnicos/RegistroTecnicos.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -17,7 +18,6 @@
 
   <ItemGroup>
     <Folder Include="Components\Pages\Consulta\" />
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
