--- a/RegistroTecnicos/appsettings.json
+++ b/RegistroTecnicos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConStr" : "Data Source = Data\\Tecnicos.Db"
+    "ConStr": "Data Source=DESKTOP-HRO309F\\SQLEXPRESS;Database=RegistroTecnicosDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
   },
 
   "Logging": {
